--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
   <title>Bookstat</title>
 </head>
 <script type="module" src="/src/index.tsx"></script>
+<style>
+  body {
+    margin: 0;
+  }
+</style>
 
 <body id="app">
   <noscript>You need to enable JavaScript to run this app.</noscript>
