--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
     <meta charset="utf-8" />
@@ -19,7 +19,8 @@
     }
 </style>
 
-<body id="app">
+<body>
+    <div id="app"></div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
 </body>
